Fix alignment problem on firefox

--- a/app/assets/stylesheets/10-osul-megamenu.css.scss
+++ b/app/assets/stylesheets/10-osul-megamenu.css.scss
@@ -16,7 +16,6 @@
 }
 
 .megamenu-menu {
-  height: 34px;
   overflow:visible;
   padding:3px 0px;
   @include border-radius(4px);
